  (Gabriel Scherer)

- GPR#1619: expect_test: print all the exceptions, even the unexpected ones
  (Thomas Refis, review by Jérémie Dimino)

- GPR#1621: expect_test: make sure to not use the installed stdlib
  (Jérémie Dimino, review by Thomas Refis)

- GPR#1646 : add ocamldoc test to ocamltest and
  migrate ocamldoc tests to ocamltest
  (Florian Angeletti, review by Sébastien Hinderer)

### Bug fixes

- MPR#4499, GPR#1479: Use native Windows API to implement Sys.getenv,
  Unix.getenv and Unix.environment under Windows.
  (Nicolás Ojeda Bär, report by Alain Frisch, review by David Allsopp, Xavier
  Leroy)

- MPR#5250, GPR#1435: on Cygwin, when ocamlrun searches the path
  for a bytecode executable file, skip directories and other
  non-regular files, like other Unix variants do.
  (Xavier Leroy)

- MPR#6394, GPR#1425: fix fatal_error from Parmatch.get_type_path
  (Virgile Prevosto, review by David Allsopp, Thomas Refis and Jacques Garrigue)

* MPR#6604, GPR#931: Only allow directives with filename and at the beginning of
  the line
  (Tadeu Zagallo, report by Roberto Di Cosmo,
   review by Hongbo Zhang, David Allsopp, Gabriel Scherer, Xavier Leroy)

- MPR#7391, GPR#1620: Do not put a dummy method in object types
  (Thomas Refis, review by Jacques Garrigue)

- PR#7660, GPR#1445: Use native Windows API to implement Unix.utimes in order to
  avoid unintended shifts of the argument timestamp depending on DST setting.
  (Nicolás Ojeda Bär, review by David Allsopp, Xavier Leroy)

- MPR#7668: -principal is broken with polymorphic variants
  (Jacques Garrigue, report by Jun Furuse)

- MPR#7680, GPR#1497: Incorrect interaction between Matching.for_let and
  Simplif.simplify_exits
  (Alain Frisch, report and review by Vincent Laviron)

- MPR#7682, GPR#1495: fix [@@unboxed] for records with 1 polymorphic field
  (Alain Frisch, report by Stéphane Graham-Lengrand, review by Gabriel Scherer)

- MPR#7695, GPR#1541: Fatal error: exception Ctype.Unify(_) with field override